--- a/index.html
+++ b/index.html
@@ -46,6 +46,53 @@
                     </p>
                 </header>
 
+                <h2 id="D20240707">July 7th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Update Merged</strong> Stardew Valley: <em>6.x.x: The Content Update</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3478">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240706">July 6th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Inscryption [<a href="apworlds.html#Inscryption">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Rusted Moss [<a href="apworlds.html#RustedMoss">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Bomb Rush Cyberfunk [<a href="apworlds.html#BombRushCyberfunk">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Inscryption [<a href="apworlds.html#Inscryption">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Rusted Moss [<a href="apworlds.html#RustedMoss">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Kirby Super Star Ultra [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Mario and Luigi: Bowser's Inside Story [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Monster Hunter Rise [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Sonic Generations 3DS [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> MetroCUBEvania [<a href="apworlds.html#MetroCUBEvania">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Sonic Superstars [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240705">July 5th, 2024</h2>
 
                 <ul>
@@ -658,7 +705,7 @@
                     <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Paper Mario 64 [<a href="apworlds.html#PaperMario64">Link</a>]</li>
-                    <li><strong>APWorld Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -868,7 +915,7 @@
                     <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Ocarina of Time but it's just Master Quest Water Temple [<a href="apworlds.html#OcarinaOfTimeMQWaterTemple">Link</a>]</li>
-                    <li><strong>APWorld Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -877,7 +924,7 @@
                 </ul>
 
                 <ul>
-                    <li><strong>Game Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                    <li><strong>Game Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -887,7 +934,7 @@
                 </ul>
 
                 <ul>
-                    <li><strong>New Game PR Opened</strong> Yacht Dice (Yahtzee) [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3482">Link</a>]</li>
+                    <li><strong>New Game PR Opened</strong> Yacht Dice [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3482">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -906,7 +953,7 @@
                     <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Universal Tracker [<a href="apworlds.html#UniversalTracker">Link</a>]</li>
-                    <li><strong>APWorld Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -925,7 +972,7 @@
 
                 <ul>
                     <li><strong>Game Update</strong> Meritous [<a href="apworlds.html#Meritous">Link</a>]</li>
-                    <li><strong>Game Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                    <li><strong>Game Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -1039,7 +1086,7 @@
                     <li><strong>APWorld Update</strong> Subversion (Super Metroid Hack) [<a href="apworlds.html#Subversion">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Super Junkoid (Super Metroid Hack) [<a href="apworlds.html#SuperJunkoid">Link</a>]</li>
                     <li><strong>APWorld Update</strong> ULTRAKILL [<a href="apworlds.html#ULTRAKILL">Link</a>]</li>
-                    <li><strong>APWorld Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -1050,7 +1097,7 @@
                 <ul>
                     <li><strong>Game Mod Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
-                    <li><strong>Game Mod Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
                 </ul>
 
                 <ul>
