--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (176)</h2>
+                <h2>APWorlds (177)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -141,7 +141,7 @@
                 <h3><span id="AirDelivery"></span> Air Delivery (PICO-8)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/qwint/ap-air-delivery/releases">Link</a>]</li>
+                    <li><strong>APWorld + Client</strong> [<a href="https://github.com/qwint/ap-air-delivery/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/qwint/ap-air-delivery/blob/main/apworld/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1252453771661803523">Link</a>]</li>
                 </ul>
@@ -876,6 +876,13 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/959202754188963880">Link</a>]</li>
                 </ul>
 
+                <h3><span id="MetroCUBEvania"></span> MetroCUBEvania (PICO-8)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Client</strong> [<a href="https://github.com/AmaziaTheAmazing/ap-metrocubevania/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1259263968245977128">Link</a>]</li>
+                </ul>
+
                 <h3><span id="MetroidPrime"></span> Metroid Prime (GC)</h3>
 
                 <ul>
@@ -1586,7 +1593,7 @@
 
                 <span id="X"></span>
 
-                <h3><span id="Y"></span><span id="YachtDice"></span> Yacht Dice (Yahtzee) (Web)</h3>
+                <h3><span id="Y"></span><span id="YachtDice"></span> Yacht Dice (Web)</h3>
 
                 <ul>
                     <li><strong>APWorld + Game Download (HTML File)</strong> [<a href="https://github.com/spinerak/YachtDiceAP/releases">Link</a>]</li>
