--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (177)</h2>
+                <h2>APWorlds (178)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -197,7 +197,7 @@
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/drtchops/Archipelago-Astalon/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Ouro-dev/astalon-poptracker/releases">Link</a>]</li>
-                    <li><strong>Setup Guide</strong> [<a href="https://github.com/drtchops/Archipelago/blob/main/worlds/astalon/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/drtchops/Archipelago/blob/astalon/worlds/astalon/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1211521722881286164">Link</a>]</li>
                 </ul>
 
@@ -612,7 +612,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Cynichill/DivaAPworld/releases">Link</a>]</li>
-                    <li><strong>Game Mod</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1241134454391443580/1258176690413375554">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://gamebanana.com/mods/514140">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Cynichill/DivaAPworld/blob/main/docs/en_Mega_Mix.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1241134454391443580">Link</a>]</li>
                 </ul>
@@ -1208,6 +1208,14 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1188152412498829352">Link</a>]</li>
                 </ul>
 
+                <h3><span id="SeaOfThieves"></span> Sea of Thieves (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1225633406088646746/1259672458806689802">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1225633406088646746/1259672458806689802">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1225633406088646746">Link</a>]</li>
+                </ul>
+
                 <h3><span id="SecretOfEvermore"></span> Secret of Evermore (SNES)</h3>
 
                 <ul>
@@ -1596,9 +1604,9 @@
                 <h3><span id="Y"></span><span id="YachtDice"></span> Yacht Dice (Web)</h3>
 
                 <ul>
-                    <li><strong>APWorld + Game Download (HTML File)</strong> [<a href="https://github.com/spinerak/YachtDiceAP/releases">Link</a>]</li>
+                    <li><strong>APWorld + Game Download (HTML File)</strong> [<a href="https://github.com/spinerak/ArchipelagoYachtDice/releases">Link</a>]</li>
                     <li><strong>Hosted Game</strong> [<a href="http://yacht-dice-ap.netlify.app/">Link</a>]</li>
-                    <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1217570899549491411/1222977828174434385">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/spinerak/ArchipelagoYachtDice/blob/main/worlds/yachtdice/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1217570899549491411">Link</a>]</li>
                 </ul>
 
