--- a/index.html
+++ b/index.html
@@ -49,15 +49,26 @@
                 <h2 id="D20240707">July 7th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Resident Evil 2 Remake [<a href="apworlds.html#ResidentEvil2Remake">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Game Mod Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Resident Evil 2 Remake [<a href="apworlds.html#ResidentEvil2Remake">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Game Update Merged</strong> Stardew Valley: <em>6.x.x: The Content Update</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3478">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Sea of Thieves [<a href="apworlds.html#SeaOfThieves">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240706">July 6th, 2024</h2>
