--- a/apworlds.html
+++ b/apworlds.html
@@ -1116,7 +1116,7 @@
                     <li><strong>APWorld</strong> [<a href="https://github.com/FuzzyGamesOn/RE2R_AP_World/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/FuzzyGamesOn/RE2R_AP_Client/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/FuzzyGamesOn/RE2R_AP_World/blob/main/README.md">Link</a>]</li>
-                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/1085716850370957462/1096638934857031770">Link</a>]</li>
+                    <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/1085716850370957462/1259648589039272028">Link</a>]</li>
                 </ul>
 
                 <h3><span id="ResidentEvil3Remake"></span> Resident Evil 3 Remake (PC)</h3>
