--- a/apworlds.html
+++ b/apworlds.html
@@ -895,6 +895,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/lilDavid/Archipelago-Metroid-Zero-Mission/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/ladybunne/MetroidZeroMission_PopTrackerPack/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1106280250528235620">Link</a>]</li>
                 </ul>
 
