--- a/index.html
+++ b/index.html
@@ -46,23 +46,43 @@
                     </p>
                 </header>
 
+                <h2 id="D20240709">July 9th, 2024</h2>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Epistory - Typing Chronicles [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240708">July 8th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Diddy Kong Racing [<a href="apworlds.html#DiddyKongRacing">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ocarina of Time but it's just Master Quest Water Temple [<a href="apworlds.html#OcarinaOfTimeMQWaterTemple">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokemon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Resident Evil 3 Remake [<a href="apworlds.html#ResidentEvil3Remake">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Game Mod Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Resident Evil 3 Remake [<a href="apworlds.html#ResidentEvil3Remake">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Subnautica [<a href="apworlds.html#Subnautica">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Manual APWorld Update</strong> Paper Mario: The Thousand-Year Door [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Streets of Rogue [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Metroid: Zero Mission [<a href="apworlds.html#MetroidZeroMission">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240707">July 7th, 2024</h2>
