--- a/index.html
+++ b/index.html
@@ -46,10 +46,49 @@
                     </p>
                 </header>
 
+                <h2 id="D20240710">July 10th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> MetroCUBEvania [<a href="apworlds.html#MetroCUBEvania">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Rusted Moss [<a href="apworlds.html#RustedMoss">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sea of Thieves [<a href="apworlds.html#SeaOfThieves">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> MetroCUBEvania [<a href="apworlds.html#MetroCUBEvania">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Rusted Moss [<a href="apworlds.html#RustedMoss">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Fire Emblem Engage [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240709">July 9th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid: Zero Mission [<a href="apworlds.html#MetroidZeroMission">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> The Guardian Legend [<a href="apworlds.html#TheGuardianLegend">Link</a>]</li>
+                </ul>
+                
+                <ul>
+                    <li><strong>Game Mod Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Adventure Forward 2 Restored [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Decked Out 2 (Minecraft Map) [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Epistory - Typing Chronicles [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> LEGO Batman: The Videogame [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Super Mario Odyssey [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> IKEA: The Co-Worker (Roblox) [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Team Fortress 2 [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
