--- a/apworlds.html
+++ b/apworlds.html
@@ -955,6 +955,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/StripesOO7/oot-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Ocarina%20of%20Time/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/884928390421938206">Link</a>]</li>
                 </ul>
