--- a/index.html
+++ b/index.html
@@ -46,10 +46,29 @@
                     </p>
                 </header>
 
+                <h2 id="D20240711">July 11th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Balatro [<a href="apworlds.html#Balatro">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Balatro [<a href="apworlds.html#Balatro">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Update Merged</strong> Zillion <em>more rooms added to map_gen option</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3634">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Manual Rhythm Game Randomizer [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240710">July 10th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> MetroCUBEvania [<a href="apworlds.html#MetroCUBEvania">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Paper Mario 64 [<a href="apworlds.html#PaperMario64">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Rusted Moss [<a href="apworlds.html#RustedMoss">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Sea of Thieves [<a href="apworlds.html#SeaOfThieves">Link</a>]</li>
                 </ul>
@@ -61,6 +80,21 @@
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Fire Emblem Engage [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Manual Rhythm Game Randomizer [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Minecraft Suffering [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Paper Mario: The Thousand-Year Door [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Luigi's Mansion: Dark Moon [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Ocarina of Time [<a href="apworlds.html#OcarinaOfTime">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Pokemon Red and Blue [<a href="apworlds.html#PokemonRedAndBlue">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240709">July 9th, 2024</h2>
@@ -71,7 +105,7 @@
                     <li><strong>APWorld Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
                     <li><strong>APWorld Update</strong> The Guardian Legend [<a href="apworlds.html#TheGuardianLegend">Link</a>]</li>
                 </ul>
-                
+
                 <ul>
                     <li><strong>Game Mod Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
