--- a/index.html
+++ b/index.html
@@ -46,10 +46,22 @@
                     </p>
                 </header>
 
+                <h2 id="D20240712">July 12th, 2024</h2>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Bomb Rush Cyberfunk [<a href="apworlds.html#BombRushCyberfunk">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Team Fortress 2 - Mann vs. Machine [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> TrackMania (2020) [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240711">July 11th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Balatro [<a href="apworlds.html#Balatro">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wargroove 2 [<a href="apworlds.html#Wargroove2">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -62,6 +74,12 @@
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Manual Rhythm Game Randomizer [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Mario and Luigi: Bowser's Inside Story [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> The Grinch [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> A Short Hike [<a href="apworlds.html#AShortHike">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240710">July 10th, 2024</h2>
