--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (178)</h2>
+                <h2>APWorlds (180)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -471,7 +471,15 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1223230842130796544">Link</a>]</li>
                 </ul>
 
-                <h3><span id="E"></span><span id="EnderLiliesQuietusOfTheKnights"></a> Ender Lilies: Quietus of the Knights (PC)</h3>
+                <h3><span id="E"></span><span id="EarthBound"></a> EarthBound (SNES)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1077266688657068032/1261559832557916243">Link</a>]</li>
+                    <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1077266688657068032/1261562133284393008">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1077266688657068032">Link</a>]</li>
+                </ul>
+
+                <h3><span id="EnderLiliesQuietusOfTheKnights"></a> Ender Lilies: Quietus of the Knights (PC)</h3>
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Trexounay/EnderLilies.Archipelago/releases">Link</a>]</li>
@@ -697,6 +705,14 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/JDProchaska/Kingdom-Hearts-2-FM-Pop-Tracker-Pack/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Kingdom%20Hearts%202/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090817012416118815">Link</a>]</li>
+                </ul>
+
+                <h3><span id="KingdomHearts3582Days"></span> Kingdom Hearts 358/2 Days (DS)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1087405565069766756/1261421354784391228">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1087405565069766756/1088418720906498088">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1087405565069766756">Link</a>]</li>
                 </ul>
 
                 <h3><span id="KingdomHeartsReChainOfMemories"></span> Kingdom Hearts Re:Chain of Memories (PC)</h3>
