--- a/index.html
+++ b/index.html
@@ -46,15 +46,52 @@
                     </p>
                 </header>
 
+                <h2 id="D20240713">July 13th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> The Binding of Isaac: Repentance [<a href="apworlds.html#TheBindingOfIsaacRepentance">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Ready or Not [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240712">July 12th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokemon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
+                </ul>
 
                 <ul>
                     <li><strong>Game Mod Update</strong> Bomb Rush Cyberfunk [<a href="apworlds.html#BombRushCyberfunk">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Manual APWorld Update</strong> Kirby Super Star Ultra [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Team Fortress 2 - Mann vs. Machine [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Tower Unite [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> TrackMania (2020) [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Kingdom Hearts 358/2 Days [<a href="apworlds.html#KingdomHearts3582Days">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Lingo [<a href="apworlds.html#Lingo">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240711">July 11th, 2024</h2>
